# skills-curated

./: .gitignore  CLAUDE.md  CODEOWNERS  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.claude/commands/: import-skill.md  review-plugin.md
.github/: dependabot.yml
.github/workflows/: lint.yml  security-scan.yml
plugins/ask-questions-if-underspecified/: README.md
plugins/ffuf-web-fuzzing/: LICENSE  README.md
plugins/ghidra-headless/: README.md
plugins/humanizer/: README.md
plugins/last30days/: README.md
plugins/openai-cloudflare-deploy/: .source-hash  README.md
plugins/openai-develop-web-game/: .source-hash  README.md
plugins/openai-doc/: .source-hash  README.md
plugins/openai-gh-address-comments/: .source-hash  README.md
plugins/openai-gh-fix-ci/: .source-hash  README.md
plugins/openai-jupyter-notebook/: .source-hash  README.md
plugins/openai-netlify-deploy/: .source-hash  README.md
plugins/openai-pdf/: .source-hash  README.md
plugins/openai-playwright/: .source-hash  README.md
plugins/openai-screenshot/: .source-hash  README.md
plugins/openai-security-best-practices/: .source-hash  README.md
plugins/openai-security-ownership-map/: .source-hash  README.md
plugins/openai-security-threat-model/: .source-hash  README.md
plugins/openai-sentry/: .source-hash  README.md
plugins/openai-spreadsheet/: .source-hash  README.md
plugins/openai-yeet/: .source-hash  README.md
plugins/planning-with-files/: README.md
plugins/python-code-simplifier/: README.md
scripts/: convert_openai_skills.py  scan_plugin.py
(+130 files in other folders)
